--- a/12345.html
+++ b/12345.html
@@ -64,8 +64,8 @@
 					</nav>
 	<main>
 		<header>
-		<div class="col-md-12 col-lg-12"><br></div>
-		<div class="col-md-12 col-lg-12">
+		<div class="col-sm-12 col-md-12 col-lg-12"><br></div>
+		<div class="col-sm-12 col-md-12 col-lg-12">
 		<div class="my-container">
 		<div class="container">
         <div class="row">
@@ -76,23 +76,23 @@
 		</div>
 		</div>
 		</div>
-		<div class="col-md-12 col-lg-12"> <br>
+		<div class="col-sm-12 col-md-12 col-lg-12"> <br>
 		</div>
 		</header>
 		<div class="the-container">
 		<div class="container">
         <div class="row"> 
-			<div class="col-md-12 col-lg-12">
+			<div class="col-sm-12 col-md-12 col-lg-12">
 				<h1>Jeans</h1>
 			</div>
 		</div>
 		</div>
 		</div>
-		<div class="col-md-12 col-lg-12"><br></div>
+		<div class="col-sm-12 col-md-12 col-lg-12"><br></div>
 		<div class="my-container">
 		<div class="container">
         <div class="row">            
-			<div class="col-md-4 col-lg-4">
+			<div class="col-sm-12 col-md-4 col-lg-4">
 			<article class="green">
 				<h3>€5-€25</h3>
 				<a href="https://www.vinted.nl/vetements?search_text=sustainable%20jeans/" target="_blank"> <img class="img-fluid" src="images/jeans1.png" alt="" width="400" height="200"></a>
@@ -103,7 +103,7 @@
 			
 			</article>
 			</div>		
-			<div class="col-md-4 col-lg-4">
+			<div class="col-sm-12 col-md-4 col-lg-4">
 			<article class="green">
 				<h3>€25-€50</h3>
 				<a href="https://www.na-kd.com/nl/zoek-producten/organisch-rechte-high-waist-jeans-blauw-9?utm_source=google&utm_medium=cpc&utm_campaign=NL_%7Bifmobile:MB%7D%7Bifnotmobile:DT%7D_SEA_GGL_SHP_ALL_NBR_X_X_X_a*499-802-0213_c*%7Bcampaignname%7D_g*%7Badgroupname%7D_k*1660-000122-0003-582&dfw_tracker=30165-782678&gclid=CjwKCAjwxuuCBhATEiwAIIIz0dEV5BDsf4oUTEFxxX3gyxkLYBjpkLnBEbx2jr6ltOd6Kp_P3qIhtBoCnfoQAvD_BwE" target="_blank"> <img class="img-fluid" src="images/jeans2.png" alt="" width="400" height="200"> </a>
@@ -112,7 +112,7 @@
 				</h4>
 				</article>
 			</div>
-			<div class="col-md-4 col-lg-4">
+			<div class="col-sm-12 col-md-4 col-lg-4">
 			<article class="green">
 				<h3> €50+ </h3>
 				<a href="https://kotn.com/collections/womens-bottoms" target="_blank"> <img class="img-fluid" src="images/jeans3.png" alt="" width="400" height="200"> </a>
@@ -124,21 +124,21 @@
 		</div>
 		</div>
 		</div>
-		<div class="col-md-12 col-lg-12"><br></div>
+		<div class="col-sm-12 col-md-12 col-lg-12"><br></div>
 		<div class="the-container">
 		<div class="container">
         <div class="row"> 
-			<div class="col-md-12 col-lg-12">
+			<div class="col-sm-12 col-md-12 col-lg-12">
 				<h1>Dresses</h1>
 			</div>
 		</div>
 		</div>
 		</div>			
-		<div class="col-md-12 col-lg-12"><br></div>
+		<div class="col-sm-12 col-md-12 col-lg-12"><br></div>
 		<div class="my-container">
 		<div class="container">
         <div class="row">
-				<div class="col-md-4 col-lg-4">
+				<div class="col-sm-12 col-md-4 col-lg-4">
 			<article class="green">
 				<h3> €5-€25</h3>
 				<a href="https://wearpact.com/women/apparel/dresses%20&%20skirts" target="_blank"> <img class="img-fluid" src="images/dress1.png" alt="" width="500" height="150"> </a>
@@ -146,7 +146,7 @@
 				<h4> Pacts partners with Fair Trade Certified™ factories because they ensure care for both people and planet. Fair Trade factories provide safe working conditions, empower and uplift local communities, and protect the environment. in addition all the cotton is organic </h4>
 			</article>
 			</div>		
-			<div class="col-md-4 col-lg-4">
+			<div class="col-sm-12 col-md-4 col-lg-4">
 			<article class="green">
 				<h3>€25-€50 </h3>
 				<a href="https://tentree.co.uk/collections/womens-dresses-rompers" target="_blank"> <img class="img-fluid" src="images/dress2.png" alt="" width="500" height="150"> </a>
@@ -154,7 +154,7 @@
 				<h4> With tentree, every purchase which is made they plant 10 trees. By planting trees for every purchase, they're making a big change accessible to everybody and showing the lasting impact that one small choice can have </h4>
 			</article>
 			</div>
-			<div class="col-md-4 col-lg-4">
+			<div class="col-sm-12 col-md-4 col-lg-4">
 			<article class="green">
 				<h3> €50 + </h3>
 				<a href="https://www.prana.com/women/dresses-skirts.html" target="_blank"> <img class="img-fluid" src="images/dress3.png" alt="" width="500" height="150"> </a>
@@ -166,23 +166,23 @@
 		</div>
 		</div>
 		</div>
-		<div class="col-md-12 col-lg-12"><br></div>
+		<div class="col-sm-12 col-md-12 col-lg-12"><br></div>
 		
 		<div class="the-container">
 		<div class="container">
         <div class="row"> 
-			<div class="col-md-12 col-lg-12">
+			<div class="col-sm-12 col-md-12 col-lg-12">
 				<h1>T-shirts</h1>
 			</div>
 		</div>
 		</div>
 		</div>
 		
-		<div class="col-md-12 col-lg-12"><br></div>
+		<div class="col-sm-12 col-md-12 col-lg-12"><br></div>
 		<div class="my-container">
 		<div class="container">
         <div class="row">
-			<div class="col-md-4 col-lg-4">
+			<div class="col-sm-12 col-md-4 col-lg-4">
 			<article class="green">
 				<h3>€5-€25</h3>
 				<a href="https://www.green-shirts.com/en/men/t-shirts/?p=1 " target="_blank"> <img class="img-fluid" src="images/shirt1.png" alt="" width="400" height="200"> </a>
@@ -190,7 +190,7 @@
 				<h4> Social Eco Wear by Green Shirts A dedicated team of international fashion designer, product developer combined with a CEO with a great vision. That makes GREEN SHIRTS to one of the rising stars of sustainable Fashion's industry. </h4>
 			</article>
 			</div>		
-			<div class="col-md-4 col-lg-4">
+			<div class="col-sm-12 col-md-4 col-lg-4">
 			<article class="green">
 				<h3> €25-€50</h3>
 				<a href="https://wearpact.com/women/apparel/tops%20&%20shirts " target="_blank"> <img class="img-fluid" src="images/shirt2.png" alt="" width="400" height="200"> </a>
@@ -199,7 +199,7 @@
 				</h4>
 			</article>
 			</div>
-			<div class="col-md-4 col-lg-4">
+			<div class="col-sm-12 col-md-4 col-lg-4">
 			<article class="green">
 				<h3> €50 +</h3>
 				<a href="https://colorfulstandard.com/collections/colorful-standard/Crewneck+Male?gclid=CjwKCAjwxuuCBhATEiwAIIIz0Z8uFb9h1ADqS5MJQ0VzlbVpYUEU2Mxyon_1aGugDKRVv5kvvAm90RoCPMQQAvD_BwE " target="_blank"> <img class="img-fluid" src="images/shirt3.png" alt="" width="400" height="200"> </a>
