--- a/1234567.html
+++ b/1234567.html
@@ -64,8 +64,8 @@
 					</nav>
 	<main>
 		<header>
-		<div class="col-md-12 col-lg-12"><br></div>
-		<div class="col-md-12 col-lg-12">
+		<div class="col-sm-12 col-md-12 col-lg-12"><br></div>
+		<div class="col-sm-12 col-md-12 col-lg-12">
 		<div class="my-container">
 		<div class="container">
         <div class="row">
@@ -75,23 +75,23 @@
 		</div>
 		</div>
 		</div>
-		<div class="col-md-12 col-lg-12"> <br>
+		<div class="col-sm-12 col-md-12 col-lg-12"> <br>
 		</div>
 		</header>
 		<div class="the-container">
 		<div class="container">
         <div class="row"> 
-			<div class="col-md-12 col-lg-12">
+			<div class="col-sm-12 col-md-12 col-lg-12">
 				<h1>Make Up</h1>
 			</div>
 		</div>
 		</div>
 		</div>
-		<div class="col-md-12 col-lg-12"><br></div>
+		<div class="col-sm-12 col-md-12 col-lg-12"><br></div>
 		<div class="my-container">
 		<div class="container">
         <div class="row">            
-			<div class="col-md-4 col-lg-4">
+			<div class="col-sm-12 col-md-4 col-lg-4">
 			<article class="green">
 				<h3>€5-€25</h3>
 				<a href="https://nl.loccitane.com/make-up,50,2,95847,1377369.htm " target="_blank"> <img class="img-fluid" src="images/makeup1.png" alt="" width="500" height="150"></a>
@@ -99,7 +99,7 @@
 				<h4><!-- Information --></h4>		
 			</article>
 			</div>		
-			<div class="col-md-4 col-lg-4">
+			<div class="col-sm-12 col-md-4 col-lg-4">
 			<article class="green">
 				<h3>€25-€50</h3>
 				<a href="https://www.aveda.eu/nl/nl/products/5335/makeup/face " target="_blank"> <img class="img-fluid" src="images/makeup2.png" alt="" width="500" height="150"> </a>
@@ -107,7 +107,7 @@
 				<h4><!-- Information --></h4>
 				</article>
 			</div>
-			<div class="col-md-4 col-lg-4">
+			<div class="col-sm-12 col-md-4 col-lg-4">
 			<article class="green">
 				<h3> €50+ </h3>
 				<a href="https://axiologybeauty.com/?rfsn=4657262.e42dde " target="_blank"> <img class="img-fluid" src="images/makeup3.png" alt="" width="500" height="150"> </a>
@@ -118,21 +118,21 @@
 		</div>
 		</div>
 		</div>
-		<div class="col-md-12 col-lg-12"><br></div>
+		<div class="col-sm-12 col-md-12 col-lg-12"><br></div>
 		<div class="the-container">
 		<div class="container">
         <div class="row"> 
-			<div class="col-md-12 col-lg-12">
+			<div class="col-sm-12 col-md-12 col-lg-12">
 				<h1>Skincare</h1>
 			</div>
 		</div>
 		</div>
 		</div>			
-		<div class="col-md-12 col-lg-12"><br></div>
+		<div class="col-sm-12 col-md-12 col-lg-12"><br></div>
 		<div class="my-container">
 		<div class="container">
         <div class="row">
-				<div class="col-md-4 col-lg-4">
+				<div class="col-sm-12 col-md-4 col-lg-4">
 			<article class="green">
 				<h3> €5-€25</h3>
 				<a href="https://nl.lush.com/products/gezichtsreinigers-en-scrubs " target="_blank"> <img class="img-fluid" src="images/skin1.png" alt="" width="500" height="150"> </a>
@@ -140,7 +140,7 @@
 				<h4><!-- Information --></h4>
 			</article>
 			</div>		
-			<div class="col-md-4 col-lg-4">
+			<div class="col-sm-12 col-md-4 col-lg-4">
 			<article class="green">
 				<h3>€25-€50 </h3>
 				<a href="https://www.soapdaze.com " target="_blank"> <img class="img-fluid" src="images/skin2.png" alt="" width="500" height="150"> </a>
@@ -148,7 +148,7 @@
 				<h4><!-- Information --></h4>
 			</article>
 			</div>
-			<div class="col-md-4 col-lg-4">
+			<div class="col-sm-12 col-md-4 col-lg-4">
 			<article class="green">
 				<h3> €50 + </h3>
 				<a href="https://www.earthtoearthorganics.com/about " target="_blank"> <img class="img-fluid" src="images/skin3.png" alt="" width="500" height="150"> </a>
@@ -159,23 +159,23 @@
 		</div>
 		</div>
 		</div>
-		<div class="col-md-12 col-lg-12"><br></div>
+		<div class="col-sm-12 col-md-12 col-lg-12"><br></div>
 		
 		<div class="the-container">
 		<div class="container">
         <div class="row"> 
-			<div class="col-md-12 col-lg-12">
+			<div class="col-sm-12 col-md-12 col-lg-12">
 				<h1>Hair Products</h1>
 			</div>
 		</div>
 		</div>
 		</div>
 		
-		<div class="col-md-12 col-lg-12"><br></div>
+		<div class="col-sm-12 col-md-12 col-lg-12"><br></div>
 		<div class="my-container">
 		<div class="container">
         <div class="row">
-			<div class="col-md-4 col-lg-4">
+			<div class="col-sm-12 col-md-4 col-lg-4">
 			<article class="green">
 				<h3>€5-€25</h3>
 				<a href="https://www.lovebeautyandplanet.com/nl/home.html?gclsrc=aw.ds&gclid=CjwKCAjwr_uCBhAFEiwAX8YJgZtVwwFQkc5NX1v2qfnSmfGWwWk6URbTIS1yZjiDXYr_7e3cZiiOhBoCu50QAvD_BwE&gclid=CjwKCAjwr_uCBhAFEiwAX8YJgZtVwwFQkc5NX1v2qfnSmfGWwWk6URbTIS1yZjiDXYr_7e3cZiiOhBoCu50QAvD_BwE " target="_blank"> <img class="img-fluid" src="images/hair1.png" alt="" width="400" height="200"> </a>
@@ -191,7 +191,7 @@
 				<h4> <!-- Information --></h4>
 			</article>
 			</div>
-			<div class="col-md-4 col-lg-4">
+			<div class="col-sm-12 col-md-4 col-lg-4">
 			<article class="green">
 				<h3> €50 +</h3>
 				<a href="https://www.aveda.eu/nl/nl/?gclsrc=aw.ds&&gclid=CjwKCAjwr_uCBhAFEiwAX8YJgcHar5OnXPZRj5olF9ZnghvOX_pJYx_QWDWjIT2CKI4LeC9FtscGqxoC2xcQAvD_BwE " target="_blank"> <img class="img-fluid" src="images/hair3.png"  alt="" width="400" height="200"></a>
