--- a/123456789.html
+++ b/123456789.html
@@ -61,15 +61,20 @@
 							</form>
 						</div>
 					</nav>
-	<header>
-		<h1 class="colortitle"> Contact </h1>
-	</header>
 	<main>
-	
+		<div class="col-sm-12 col-md-12 col-lg-12"><br></div>
 		<div class="my-container">
 		<div class="container">
         <div class="row">
-            <div class="col-md-8 col-lg-8">
+			<h3> Contact </h3> 
+		</div>
+		</div>
+		</div>
+		<div class="col-sm-12 col-md-12 col-lg-12"><br></div>
+		<div class="my-container">
+		<div class="container">
+        <div class="row">
+            <div class="col-sm-12 col-md-8 col-lg-8">
 				<h1 class="title">Find us</h1>
 				<header class="subtext">
               				<h1 class="subtext">
@@ -82,10 +87,10 @@
 					</h1>
 				</header>
             </div>
-            <div class="col-md-4 col-lg-4">
+            <div class="col-sm-12 col-md-4 col-lg-4">
 				<header class="first"><a href="12345.html" target="_blank"><br><img class="img-fluid" src="images/logo.png" alt="" width="600" height="400"></a></header>                
             </div>
-			<div class="col-md-12 col-lg-12"> <br>
+			<div class="col-sm-12 col-md-12 col-lg-12"> <br>
 		</div>
 		</div>
 		</div>
