--- a/123456.html
+++ b/123456.html
@@ -69,23 +69,23 @@
 		</div>
 		</div>
 		</div>
-		<div class="col-md-12 col-lg-12"> <br>
+		<div class="col-sm-12 col-md-12 col-lg-12"> <br>
 		</div>
 		</header>
 		<div class="the-container">
 		<div class="container">
         <div class="row"> 
-			<div class="col-md-12 col-lg-12">
+			<div class="col-sm-12 col-md-12 col-lg-12">
 				<h1>Tableware</h1>
 			</div>
 		</div>
 		</div>
 		</div>
-		<div class="col-md-12 col-lg-12"><br></div>
+		<div class="col-sm-12 col-md-12 col-lg-12"><br></div>
 		<div class="my-container">
 		<div class="container">
         <div class="row">            
-			<div class="col-md-4 col-lg-4">
+			<div class="col-sm-12 col-md-4 col-lg-4">
 			<article class="green">
 				<h3>€5-€25</h3>
 				<a href="https://www.etsy.com/market/used_dinnerware?awc=9208_1616774702_656d7d6b4a034da7daf8130f0cc6cd76&zanpid=9208_1616774702_656d7d6b4a034da7daf8130f0cc6cd76&utm_medium=affiliate&utm_source=affiliate_window&utm_campaign=nl_buyer&utm_content=136348&utm_term=89179 " target="_blank"> <img class="img-fluid" src="images/table1.jpg"  alt="" width="400" height="200"></a>
@@ -93,7 +93,7 @@
 				<h4> Etsy is a global online marketplace, where poeple come together to make,sell,buy and collect unique items. there are also a lot of sustainable products in their collection and good for the environment. </h4>
 			</article>
 			</div>		
-			<div class="col-md-4 col-lg-4">
+			<div class="col-sm-12 col-md-4 col-lg-4">
 			<article class="green">
 				<h3>€25-€50</h3>
 				<a href="https://www.newly.com/collections/glassware" target="_blank"> <img class="img-fluid" src="images/table2.png" alt="" width="300" height="600"> </a>
@@ -101,7 +101,7 @@
 				<h4><!-- Information --></h4>
 				</article>
 			</div>
-			<div class="col-md-4 col-lg-4">
+			<div class="col-sm-12 col-md-4 col-lg-4">
 			<article class="green">
 				<h3> €50+ </h3>
 				 <a href="https://eastfork.com/?sscid=31k5_r1zzr&" target="_blank"> <img class="img-fluid" src="images/table3.png" alt="" width="300" height="600"> </a>
@@ -112,21 +112,21 @@
 		</div>
 		</div>
 		</div>
-		<div class="col-md-12 col-lg-12"><br></div>
+		<div class="col-sm-12 col-md-12 col-lg-12"><br></div>
 		<div class="the-container">
 		<div class="container">
         <div class="row"> 
-			<div class="col-md-12 col-lg-12">
+			<div class="col-sm-12 col-md-12 col-lg-12">
 				<h1>Cleaning Products</h1>
 			</div>
 		</div>
 		</div>
 		</div>			
-		<div class="col-md-12 col-lg-12"><br></div>
+		<div class="col-sm-12 col-md-12 col-lg-12"><br></div>
 		<div class="my-container">
 		<div class="container">
         <div class="row">
-				<div class="col-md-4 col-lg-4">
+				<div class="col-sm-12 col-md-4 col-lg-4">
 			<article class="green">
 				<h3> €5-€25</h3>
 				<a href="https://www.grove.co/home/" target="_blank"> <img class="img-fluid" src="images/clean1.png" alt="" width="500" height="150"> </a>
@@ -134,7 +134,7 @@
 				<h4> <!-- Information --> </h4>
 			</article>
 			</div>		
-			<div class="col-md-4 col-lg-4">
+			<div class="col-sm-12 col-md-4 col-lg-4">
 			<article class="green">
 				<h3>€25-€50 </h3>
 				<a href="https://www.commongoodandco.com/collections/all" target="_blank"> <img class="img-fluid" src="images/clean2.png" alt="" width="500" height="150"> </a>
@@ -142,7 +142,7 @@
 				<h4> <!-- Information --> </h4>
 			</article>
 			</div>
-			<div class="col-md-4 col-lg-4">
+			<div class="col-sm-12 col-md-4 col-lg-4">
 			<article class="green">
 				<h3> €50 + </h3>
 				<a href="https://shoppurhome.com" target="_blank"> <img class="img-fluid" src="images/clean3.png" alt="" width="500" height="150"> </a>
@@ -153,23 +153,23 @@
 		</div>
 		</div>
 		</div>
-		<div class="col-md-12 col-lg-12"><br></div>
+		<div class="col-sm-12 col-md-12 col-lg-12"><br></div>
 		
 		<div class="the-container">
 		<div class="container">
         <div class="row"> 
-			<div class="col-md-12 col-lg-12">
+			<div class="col-sm-12 col-md-12 col-lg-12">
 				<h1>Furniture</h1>
 			</div>
 		</div>
 		</div>
 		</div>
 		
-		<div class="col-md-12 col-lg-12"><br></div>
+		<div class="col-sm-12 col-md-12 col-lg-12"><br></div>
 		<div class="my-container">
 		<div class="container">
         <div class="row">
-			<div class="col-md-4 col-lg-4">
+			<div class="col-sm-12 col-md-4 col-lg-4">
 			<article class="green">
 				<h3>€5-€25</h3>
 				<a href="https://www.etsy.com/market/reclaimed_furniture?awc=9208_1616947189_c3b0320e12265e5f504a21b8fd7ada73&zanpid=9208_1616947189_c3b0320e12265e5f504a21b8fd7ada73&utm_medium=affiliate&utm_source=affiliate_window&utm_campaign=nl_buyer&utm_content=136348&utm_term=89179" target="_blank"> <img class="img-fluid" src="images/home1.png" alt="" width="400" height="200"> </a>
@@ -177,7 +177,7 @@
 				<h4> <!-- Information --></h4>
 			</article>
 			</div>		
-			<div class="col-md-4 col-lg-4">
+			<div class="col-sm-12 col-md-4 col-lg-4">
 			<article class="green">
 				<h3> €25-€50</h3>
 				<a href="https://joybird.com" target="_blank"> <img class="img-fluid" src="images/home2.png" alt="" width="400" height="200"> </a>
@@ -185,7 +185,7 @@
 				<h4><!-- Information --></h4>
 			</article>
 			</div>
-			<div class="col-md-4 col-lg-4">
+			<div class="col-sm-12 col-md-4 col-lg-4">
 			<article class="green">
 				<h3> €50 +</h3>
 				<a href="https://www.avocadogreenmattress.com/collections/furniture?irclickid=T-5VTEU6HxyLTjL0M-0V7wD0UkEXGfx0CRF%3ASE0&irgwc=1&utm_medium=affiliate&utm_source=impact&utm_campaign=1810803&ar_clx=yes&ar_channel=impact&ar_campaign=affiliate&ar_adgroup=%7Bpublisher_id%7D&ar_ad=%7Bad_id%7D&ar_strategy=aff" target="_blank"> <img class="img-fluid" src="images/home3.png" alt="" width="400" height="200"> </a>
