--- a/12345678.html
+++ b/12345678.html
@@ -62,8 +62,7 @@
 					</nav>
 	<main>
 		<header>
-		<div class="col-md-12 col-lg-12"><br></div>
-		<div class="col-md-12 col-lg-12">
+		<div class="col-sm-12 col-md-12 col-lg-12"><br></div>
 		<div class="my-container">
 		<div class="container">
         <div class="row">
@@ -72,24 +71,23 @@
 		</div>
 		</div>
 		</div>
-		</div>
-		<div class="col-md-12 col-lg-12"> <br>
+		<div class="col-sm-12 col-md-12 col-lg-12"> <br>
 		<div class="the-container">
 		<div class="container">
         <div class="row"> 
-			<div class="col-md-12 col-lg-12">
+			<div class="col-sm-12 col-md-12 col-lg-12">
 				<h1>Subscriptions</h1>
 			</div>
 		</div>
 		</div>
 		</div>			
-		<div class="col-md-12 col-lg-12"><br></div>
+		<div class="col-sm-12 col-md-12 col-lg-12"><br></div>
 		</div>
 		</header>
 		<div class="my-container">
 		<div class="container">
         <div class="row">
-            <div class="col-md-8 col-lg-8">
+            <div class="col-sm-12 col-md-8 col-lg-8">
 				<h1 class="title"> Subscription 1 - €15,99 </h1>
 				<header class="subtext">
                 			<h1 class="subtext">
@@ -102,20 +100,20 @@
 					</h1>
 				</header>
             </div>
-            <div class="col-md-4 col-lg-4">
+            <div class="col-sm-12 col-md-4 col-lg-4">
 				<header class="first"><br><img class="img-fluid" src="images/sub1.jpeg" alt="" width="600" height="400"></header>                
             </div>
-			<div class="col-md-12 col-lg-12"><br>
+			<div class="col-sm-12 col-md-12 col-lg-12"><br>
 		</div>
 		</div>
 		</div>
 		</div>
-		<div class="col-md-12 col-lg-12"><br>
+		<div class="col-sm-12 col-md-12 col-lg-12"><br>
 		</div>
 		<div class="my-container">
 		<div class="container">
         <div class="row">
-            <div class="col-md-8 col-lg-8">
+            <div class="col-sm-12 col-md-8 col-lg-8">
 				<h1 class="title"> Subscription 2 - €29,99 </h1>
 				<header class="subtext">
                 			<h1 class="subtext">
@@ -130,57 +128,57 @@
 					</h1>
 				</header>
             </div>
-            <div class="col-md-4 col-lg-4">
+            <div class="col-sm-12 col-md-4 col-lg-4">
 				<header class="first"><br><img class="img-fluid" src="images/sub2.jpeg" alt="" width="600" height="400"></header>                
             </div>
-			<div class="col-md-12 col-lg-12"> <br>
+			<div class="col-sm-12 col-md-12 col-lg-12"> <br>
 		</div>
 		</div>
 		</div>
 		</div>
-		<div class="col-md-12 col-lg-12"><br></div>
+		<div class="col-sm-12 col-md-12 col-lg-12"><br></div>
 		<div class="the-container">
 		<div class="container">
         <div class="row"> 
-			<div class="col-md-12 col-lg-12">
+			<div class="col-sm-12 col-md-12 col-lg-12">
 				<h1>Experts</h1>
 			</div>
 		</div>
 		</div>
 		</div>
-		<div class="col-md-12 col-lg-12"><br></div>
+		<div class="col-sm-12 col-md-12 col-lg-12"><br></div>
 		<div class="my-container">
 		<div class="container">
         <div class="row">
-			<div class="col-md-4 col-lg-4">
+			<div class="col-sm-12 col-md-4 col-lg-4">
 				<!-- change click links to right page! -->
 				<header class="title">Linda Hemsworth</header>
 				<header class="first"><img class="img-fluid" src="images/expert.jpg" alt="" width="600" height="400">
 				</header>
             </div>
-			<div class="col-md-4 col-lg-4">
+			<div class="col-sm-12 col-md-4 col-lg-4">
 							
 				<header class="title">Olivia Rhodes</header>
 				<header class="first"><img class="img-fluid" src="images/expert2.png" alt="" width="600" height="400">               
-			<div class="col-md-12 col-lg-12"> <br>
+			<div class="col-sm-12 col-md-12 col-lg-12"> <br>
 		</div>
 				</header>
 
             </div>
-			<div class="col-md-4 col-lg-4">
+			<div class="col-sm-12 col-md-4 col-lg-4">
 				<header class="title">Harry Rineolds</header>
 				<header class="first"><img class="img-fluid" src="images/expert3.png" alt="" width="600" height="400">               
 				</header>
             </div>
-			<div class="col-md-4 col-lg-4">
+			<div class="col-sm-12 col-md-4 col-lg-4">
 				<header class="subtext"> Linda is a 
 				</header>
             </div>
-			<div class="col-md-4 col-lg-4">
+			<div class="col-sm-12 col-md-4 col-lg-4">
 				<header class="subtext"> Olivia is a 
 				</header>
             </div>
-			<div class="col-md-4 col-lg-4">
+			<div class="col-sm-12 col-md-4 col-lg-4">
 				<header class="subtext"> Harry is a 
 				</header>
             </div>
@@ -189,7 +187,7 @@
 		</div>
 		<div class="container">
         <div class="row">
-			<div class="col-md-12 col-lg-12"> <br>
+			<div class="col-sm-12 col-md-12 col-lg-12"> <br>
 		</div>
 		</div>
 		</div>
