--- a/index.html
+++ b/index.html
@@ -63,13 +63,13 @@
 	<header>
 		<div class="container">
         <div class="row">
-			<div class="col-md-12 col-lg-12"> <br>
+			<div class="col-sm-12 col-md-12 col-lg-12"> <br>
 		</div>
 		</div>
 		</div>
 		<div class="container">
         <div class="row">
-		<div class=" col-md-12 col-lg-12">
+		<div class="col-sm-12 col-md-12 col-lg-12">
 			<div class="jumbotron jumbotron-fluid">
 			  <div class="container">
 				<h1 class="display-4"><img class="img-fluid" src="images/logo.png" alt=""></h1>
@@ -84,56 +84,56 @@
 	<main>
 		<div class="container">
         <div class="row">
-			<div class="col-md-12 col-lg-12"> <br>
+			<div class="col-sm-12 col-md-12 col-lg-12"> <br>
 		</div>
 		</div>
 		</div>
 		<div class="my-container">
 		<div class="container">
         <div class="row">
-            <div class="col-md-8 col-lg-8">
+            <div class="col-sm-12 col-md-8 col-lg-8">
 				<h1 class="title">Our Experts</h1>
 				<header class="subtext">
                 <h1 class="subtext">You want to live more environmental friendly, but you don’t know how? No worries, we have experts ready to help you make your life as sustainable as possible. For the mere price of €15.99  per month you receive personal advise to make your life more sustainable. <a href="12345678.html" target="_blank">Check out our experts and subscriptions!</a></h1>
 				</header>
             </div>
-            <div class="col-md-4 col-lg-4">
+            <div class="col-sm-12 col-md-4 col-lg-4">
 				<header class="first"><a href="12345678.html" target="_blank"><br><img class="img-fluid" src="images/expert.jpg" alt="" width="600" height="400"></a></header>                
             </div>
 		</div>
 		</div>
 		</div>
 		
-		<div class=" col-md-12 col-lg-12"><br></div>
+		<div class="col-sm-12 col-md-12 col-lg-12"><br></div>
 		
 		<div class="the-container">
 		<div class="container">
         <div class="row">
-			<div class=" col-md-12 col-lg-12"> 
+			<div class="col-sm-12 col-md-12 col-lg-12"> 
 				<h4>Or make use of the free comparing system of the following categories</h4>
 			</div>
 		</div>
 		</div>
 		</div>
-		<div class=" col-md-12 col-lg-12"> <br> </div>
+		<div class="col-sm-12  col-md-12 col-lg-12"> <br> </div>
 		<div class="my-container">
 		<div class="container">
         <div class="row">
-			<div class="col-md-4 col-lg-4">				
+			<div class="col-sm-12 col-md-4 col-lg-4">				
 				<header class="title">Clothes</header>
 				<header class="first"><a href="12345.html"><img class="img-fluid" src="images/clothes.jpg" alt="" width="600" height="400"></a>
 				</header>
             </div>
-			<div class="col-md-4 col-lg-4">
+			<div class="col-sm-12 col-md-4 col-lg-4">
 							
 				<header class="title">Home Supplies</header>
 				<header class="first"><a href="123456.html"><img class="img-fluid" src="images/house.jpg" alt="" width="600" height="400"></a>                
-			<div class="col-md-12 col-lg-12"> <br>
+			<div class="col-sm-12 col-md-12 col-lg-12"> <br>
 		</div>
 				</header>
 
             </div>
-			<div class="col-md-4 col-lg-4">
+			<div class="col-sm-12 col-md-4 col-lg-4">
 				<header class="title">Cosmetics</header>
 				<header class="first"><a href="1234567.html"><img class="img-fluid" src="images/makeup.png" alt="" width="600" height="400"></a>               
 				</header>
