--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 				</header>
             </div>
             <div class="col-sm-12 col-md-4 col-lg-4">
-				<header class="first"><a href="12345678.html" target="_blank"><br><img class="img-fluid" src="images/expert.jpg" alt="" width="600" height="400"></a></header>                
+				<a href="12345678.html" target="_blank"><br><img class="img-fluid" src="images/expert.jpg" alt="" width="600" height="400"></a>           
             </div>
 		</div>
 		</div>
@@ -121,22 +121,18 @@
         <div class="row">
 			<div class="col-sm-12 col-md-4 col-lg-4">				
 				<header class="title">Clothes</header>
-				<header class="first"><a href="12345.html"><img class="img-fluid" src="images/clothes.jpg" alt="" width="600" height="400"></a>
-				</header>
+				<a href="12345.html"><img class="img-fluid" src="images/dress1.png" alt="" width="400" height="200"></a>
             </div>
 			<div class="col-sm-12 col-md-4 col-lg-4">
 							
 				<header class="title">Home Supplies</header>
-				<header class="first"><a href="123456.html"><img class="img-fluid" src="images/house.jpg" alt="" width="600" height="400"></a>                
+				<a href="123456.html"><img class="img-fluid" src="images/home1.png" alt="" width="400" height="200"></a>                
 			<div class="col-sm-12 col-md-12 col-lg-12"> <br>
-		</div>
-				</header>
-
+				</div>
             </div>
 			<div class="col-sm-12 col-md-4 col-lg-4">
 				<header class="title">Cosmetics</header>
-				<header class="first"><a href="1234567.html"><img class="img-fluid" src="images/makeup.png" alt="" width="600" height="400"></a>               
-				</header>
+				<a href="1234567.html"><img class="img-fluid" src="images/makeup3.png" alt="" width="400" height="200"></a> 
             </div>
 			</div>
 			</div>
