--- a/123456789.html
+++ b/123456789.html
@@ -63,7 +63,7 @@
 					</nav>
 	<main>
 		<div class="col-sm-12 col-md-12 col-lg-12"><br></div>
-		<div class="my-container">
+		<div class="the-container">
 		<div class="container">
         <div class="row">
 			<h3> Contact </h3> 
