--- a/123456.html
+++ b/123456.html
@@ -175,7 +175,7 @@ We make our pots with dynamic, iron-rich clays dug from the American South East 
 				<h3>€5-€25</h3>
 				<a href="https://www.etsy.com/market/reclaimed_furniture?awc=9208_1616947189_c3b0320e12265e5f504a21b8fd7ada73&zanpid=9208_1616947189_c3b0320e12265e5f504a21b8fd7ada73&utm_medium=affiliate&utm_source=affiliate_window&utm_campaign=nl_buyer&utm_content=136348&utm_term=89179" target="_blank"> <img class="img-fluid" src="images/home1.png" alt="" width="400" height="200"> </a>
 				<h5>Etsy</h5> 
-				<h4> etsy is a global online marketplace, where poeple come together to make,sell,buy and collect unique items. there are also a lot of sustainable products in their collection and good for the environment.</h4>
+				<h4> Etsy is a global online marketplace, where poeple come together to make,sell,buy and collect unique items. there are also a lot of sustainable products in their collection and good for the environment.</h4>
 			</article>
 			</div>		
 			<div class="col-sm-12 col-md-4 col-lg-4">
