--- a/1234567.html
+++ b/1234567.html
@@ -95,7 +95,7 @@
 			<article class="green">
 				<h3>€5-€25</h3>
 				<a href="https://nl.loccitane.com/make-up,50,2,95847,1377369.htm " target="_blank"> <img class="img-fluid" src="images/makeup1.png" alt="" width="500" height="150"></a>
-				<h5>Loccitane</h5>
+				<h5>L'occitane</h5>
 				<h4><!-- Information --></h4>		
 			</article>
 			</div>		
