--- a/12345678.html
+++ b/12345678.html
@@ -66,8 +66,10 @@
 		<div class="my-container">
 		<div class="container">
         <div class="row">
+		<div class="col-sm-12 col-md-12 col-lg-12">
 			<h3> Experts </h3> 
 			<h4> You want to live more environmental friendly, but you don’t know how? No worries. We have experts ready to help you make your life as sustainable as possible. They will help you compare products and services. In addition they wil help you in making the right choices for your lifestyle. Making the right the right choices for your sustainable lifestyle, no matter your budget. </h4>
+		</div>
 		</div>
 		</div>
 		</div>
