--- a/123456789.html
+++ b/123456789.html
@@ -66,7 +66,9 @@
 		<div class="the-container">
 		<div class="container">
         <div class="row">
-			<h3> Contact </h3> 
+			<div class="col-sm-12 col-md-12 col-lg-12">
+				<h3> Contact </h3>
+			</div>
 		</div>
 		</div>
 		</div>
