--- a/123456789.html
+++ b/123456789.html
@@ -97,6 +97,33 @@
 		</div>
 		</div>
 		</div>
+		<div class="col-sm-12 col-md-12 col-lg-12"><br></div>
+        <div class="the-container">
+        <div class="container">
+            <div class="row">
+            <div class="col-sm-12 col-md-12 col-lg-12">
+                <h3> Or join our quizes on
+                <a href="https://www.instagram.com/nexthiveofficial/" target="_blank">Instagram</a> or <a href="https://www.facebook.com/NEXT-HIVE-100381428820716" target="_blank">FaceBook</a>  </h3> 
+            </div>
+        </div>
+        </div>
+        </div>
+<div class="col-sm-12 col-md-12 col-lg-12"><br></div>
+        <div class="my-container">
+        <div class="container">
+            <div class="row">
+            <div class="col-sm-12 col-md-4 col-lg-4">
+                <a href="https://www.instagram.com/nexthiveofficial/" target="_blank"><img class="img-fluid" src="images/ig2.png" alt="" width="200" height="400"></a>    
+            </div>
+            <div class="col-sm-12 col-md-4 col-lg-4">
+                <a href="https://www.facebook.com/NEXT-HIVE-100381428820716" target="_blank"><img class="img-fluid" src="images/ig1.png" alt="" width="200" height="400"></a>    
+            </div>
+            <div class="col-sm-12 col-md-4 col-lg-4">
+                <a href="https://www.instagram.com/nexthiveofficial/" target="_blank"><img class="img-fluid" src="images/ig3.png" alt="" width="200" height="400"></a>    
+            </div>
+        </div>
+        </div>
+        </div>
 	<footer class="endtext">
  			Follow us on
 				<a href="https://www.instagram.com/nexthiveofficial/" target="_blank"><img class="img-fluid" src="images/ig.png" alt="" width="30" height="30"></a> and <a href="https://www.facebook.com/NEXT-HIVE-100381428820716" target="_blank"><img class="img-fluid" src="images/facebook.png" alt="" width="30" height="30"></a>
