--- a/123456789.html
+++ b/123456789.html
@@ -112,14 +112,17 @@
         <div class="my-container">
         <div class="container">
             <div class="row">
-            <div class="col-sm-12 col-md-4 col-lg-4">
-                <a href="https://www.instagram.com/nexthiveofficial/" target="_blank"><img class="img-fluid" src="images/ig2.png" alt="" width="200" height="400"></a>    
+            <div class="col-sm-12 col-md-3 col-lg-3">
+                <a href="https://www.instagram.com/nexthiveofficial/" target="_blank"><img class="img-fluid" src="images/ig1.png" alt="" width="200" height="400"></a>    
             </div>
-            <div class="col-sm-12 col-md-4 col-lg-4">
-                <a href="https://www.facebook.com/NEXT-HIVE-100381428820716" target="_blank"><img class="img-fluid" src="images/ig1.png" alt="" width="200" height="400"></a>    
+            <div class="col-sm-12 col-md-3 col-lg-3">
+                <a href="https://www.facebook.com/NEXT-HIVE-100381428820716" target="_blank"><img class="img-fluid" src="images/ig2.png" alt="" width="200" height="400"></a>    
             </div>
-            <div class="col-sm-12 col-md-4 col-lg-4">
+            <div class="col-sm-12 col-md-3 col-lg-3">
                 <a href="https://www.instagram.com/nexthiveofficial/" target="_blank"><img class="img-fluid" src="images/ig3.png" alt="" width="200" height="400"></a>    
+            </div>
+			<div class="col-sm-12 col-md-3 col-lg-3">
+                <a href="https://www.facebook.com/NEXT-HIVE-100381428820716" target="_blank"><img class="img-fluid" src="images/ig4.png" alt="" width="200" height="400"></a>    
             </div>
         </div>
         </div>
