--- a/1234567.html
+++ b/1234567.html
@@ -98,7 +98,7 @@
 				<h3>€5-€25</h3>
 				<a href="https://nl.loccitane.com/make-up,50,2,95847,1377369.htm " target="_blank"> <img class="img-fluid" src="images/makeup1.png" alt="" width="500" height="150"></a>
 				<h5>L'occitane</h5>
-				<h4><!-- Information --></h4>		
+				<h4>L’occitane is a global manufacturer and retailer of natural cosmetics and well-being products. They are committed to developing high quality products and demonstrate respect for the environment throughout each step of the process. They use the very best natural and organic ingredients and strive to always demonstrate the greatest respect for nature.</h4>		
 			</article>
 			</div>		
 			<div class="col-sm-12 col-md-4 col-lg-4">
@@ -106,7 +106,7 @@
 				<h3>€25-€50</h3>
 				<a href="https://www.aveda.eu/nl/nl/products/5335/makeup/face " target="_blank"> <img class="img-fluid" src="images/makeup2.png" alt="" width="500" height="150"> </a>
 				<h5>Aveda</h5>
-				<h4><!-- Information --></h4>
+				<h4>Aveda is the leading high-performance, plant-based hair and skin care brand, trusted by millions of guests and thousands of artists and salons around the world. Our promise is to care for the whole you, connecting beauty, well-being and sustainability.</h4>
 				</article>
 			</div>
 			<div class="col-sm-12 col-md-4 col-lg-4">
@@ -114,7 +114,7 @@
 				<h3> €50+ </h3>
 				<a href="https://axiologybeauty.com/?rfsn=4657262.e42dde " target="_blank"> <img class="img-fluid" src="images/makeup3.png" alt="" width="500" height="150"> </a>
 				<h5>Axiology</h5>
-				<h4><!-- Information --></h4>
+				<h4>Axiology is 100% evil free lipstick crayons and balmies. It is a completely vegan makeup made with no animal testing, no palm oil and no lies. It is also called the ‘most ethical lipstick on the planet. It is sustainable since their make-up is zero waste. For example like their balmies they're made with only a single piece of machinery and reused water from 100% recycled paper — no virgin materials and low supplementing resources. </h4>
 			</article>
 			</div>
 		</div>
