--- a/1234567.html
+++ b/1234567.html
@@ -139,7 +139,7 @@
 				<h3> €5-€25</h3>
 				<a href="https://nl.lush.com/products/gezichtsreinigers-en-scrubs " target="_blank"> <img class="img-fluid" src="images/skin1.png" alt="" width="500" height="150"> </a>
 				<h5> Lush </h5>
-				<h4><!-- Information --></h4>
+				<h4>For more than 20 years, LUSH has been creating fresh handmade cosmetics for customers all over the world in a sustainable way. When packaging is unavoidable, we prefer to use recycled materials. 90%, by weight, of our packaging material is recycled and we're working on the remaining 10%. We would like to report on our environmental performance on a yearly basis and make sure we maintain green issues alive in the hearts of our staff, ensuring that this policy delivers on what it promises.</h4>
 			</article>
 			</div>		
 			<div class="col-sm-12 col-md-4 col-lg-4">
@@ -147,7 +147,7 @@
 				<h3>€25-€50 </h3>
 				<a href="https://www.soapdaze.com " target="_blank"> <img class="img-fluid" src="images/skin2.png" alt="" width="500" height="150"> </a>
 				<h5> Soap Daze </h5> 
-				<h4><!-- Information --></h4>
+				<h4>Soap Daze is a Natural, eco-friendly, vegan soap made with nourishing essential oils and natural butters. Made to be gentle on the skin whilst creating a creamy lather and smelling delicious. Also doesn't go all gooey in your soap dish. Also, their skincare that's gentle on your skin and the environment. Made with quality plant based oils, and botanical ingredients which is sustainable and good for our planet. </h4>
 			</article>
 			</div>
 			<div class="col-sm-12 col-md-4 col-lg-4">
@@ -155,7 +155,7 @@
 				<h3> €50 + </h3>
 				<a href="https://www.earthtoearthorganics.com/about " target="_blank"> <img class="img-fluid" src="images/skin3.png" alt="" width="500" height="150"> </a>
 				<h5> Rahua </h5> 
-				<h4><!-- Information --></h4> 
+				<h4>Rahua products—known for their pure ingredients and unparalleled performance is one of the best naturally and sustainable products to be put in the hair. Rahua draws on the wisdom of a legendary people to formulate a singular line of innovative, plant-based products to heal, nourish, beautify, and transform the natural hair. </h4> 
 			</article>
 			</div>
 		</div>
@@ -182,7 +182,7 @@
 				<h3>€5-€25</h3>
 				<a href="https://www.lovebeautyandplanet.com/nl/home.html?gclsrc=aw.ds&gclid=CjwKCAjwr_uCBhAFEiwAX8YJgZtVwwFQkc5NX1v2qfnSmfGWwWk6URbTIS1yZjiDXYr_7e3cZiiOhBoCu50QAvD_BwE&gclid=CjwKCAjwr_uCBhAFEiwAX8YJgZtVwwFQkc5NX1v2qfnSmfGWwWk6URbTIS1yZjiDXYr_7e3cZiiOhBoCu50QAvD_BwE " target="_blank"> <img class="img-fluid" src="images/hair1.png" alt="" width="400" height="200"> </a>
 				<h5>Love Beauty and Planet </h5> 
-				<h4><!-- Information --></h4>
+				<h4>Love Beauty and Planet was started by a group of like-minded people who believe that looking good and doing good should go hand-in-hand. We are obsessed with fantastic beauty products, those that we would love to use ourselves too. That’s why we started with one simple goal: whatever we do must be good for beauty and give a little love to the planet</h4>
 			</article>
 			</div>		
 			<div class="col-md-4 col-lg-4">
@@ -190,7 +190,7 @@
 				<h3> €25-€50</h3>
 				<a href="https://www.soapdaze.com " target="_blank"> <img class="img-fluid" src="images/hair2.png" alt="" width="400" height="200"> </a>
 				<h5> Soap Daze </h5>
-				<h4> <!-- Information --></h4>
+				<h4> Soap Daze is a Natural, eco-friendly, vegan soap made with nourishing essential oils and natural butters. Made to be gentle on the skin whilst creating a creamy lather and smelling delicious. Also doesn't go all gooey in your soap dish. Also, their skincare that's gentle on your skin and the environment. Made with quality plant based oils, and botanical ingredients which is sustainable and good for our planet. </h4>
 			</article>
 			</div>
 			<div class="col-sm-12 col-md-4 col-lg-4">
@@ -198,7 +198,7 @@
 				<h3> €50 +</h3>
 				<a href="https://www.aveda.eu/nl/nl/?gclsrc=aw.ds&&gclid=CjwKCAjwr_uCBhAFEiwAX8YJgcHar5OnXPZRj5olF9ZnghvOX_pJYx_QWDWjIT2CKI4LeC9FtscGqxoC2xcQAvD_BwE " target="_blank"> <img class="img-fluid" src="images/hair3.png"  alt="" width="400" height="200"></a>
 				<h5> Aveda </h5>
-				<h4> <!-- Information --></h4>
+				<h4> Aveda is the leading high-performance, plant-based hair and skin care brand, trusted by millions of guests and thousands of artists and salons around the world. Our promise is to care for the whole you, connecting beauty, well-being and sustainability.</h4>
 			</article>
 			</div>
 		</div>
