--- a/12345678.html
+++ b/12345678.html
@@ -153,47 +153,28 @@
 		<div class="container">
         <div class="row">
 			<div class="col-sm-12 col-md-4 col-lg-4">
-				<!-- change click links to right page! -->
-				<header class="title">Linda Hemsworth</header>
-				<header class="first"><img class="img-fluid" src="images/expert.jpg" alt="" width="600" height="400">
-				</header>
+				<h3>Linda Hemsworth</h3>
+				<a class="first"><img class="img-fluid" src="images/expert.jpg" alt="" width="600" height="400"></a>
+				<p class="subtext"></p>
             </div>
 			<div class="col-sm-12 col-md-4 col-lg-4">
 							
-				<header class="title">Olivia Rhodes</header>
-				<header class="first"><img class="img-fluid" src="images/expert2.png" alt="" width="600" height="400">               
+				<h3>Olivia Rhodes</h3>
+				<a class="first"><img class="img-fluid" src="images/expert2.png" alt="" width="600" height="400"></a>
+				<p class="subtext"> Olivia Rhodes Palmer is a 28-year-old professional sustainability advisor who enjoys listening to music and camping. She is energetic and inspiring, and excited to help you out!
+				</p>
 			<div class="col-sm-12 col-md-12 col-lg-12"> <br>
 		</div>
-				</header>
-
             </div>
 			<div class="col-sm-12 col-md-4 col-lg-4">
-				<header class="title">Harry Rineolds</header>
-				<header class="first"><img class="img-fluid" src="images/expert3.png" alt="" width="600" height="400">               
-				</header>
-            </div>
-			<div class="col-sm-12 col-md-4 col-lg-4">
-				<header class="subtext"> Linda is a 
-				</header>
-            </div>
-			<div class="col-sm-12 col-md-4 col-lg-4">
-				<header class="subtext"> Olivia is a 
-				</header>
-            </div>
-			<div class="col-sm-12 col-md-4 col-lg-4">
-				<header class="subtext"> Harry is a 
-				</header>
+				<h3>Harry Rine</h3>
+				<a class="first"><img class="img-fluid" src="images/expert3.png" alt="" width="600" height="400"></a>
+				<p class="subtext"> Harry Rine Young is a 31-year-old lifestyle expert who enjoys football, tennis and listening to music. He is loveable and smart. Harry has a ton of experience and is thrilled to help you!
+				</p>
             </div>
 			</div>
 			</div>
-		</div>
-		<div class="container">
-        <div class="row">
-			<div class="col-sm-12 col-md-12 col-lg-12"> <br>
-		</div>
-		</div>
-		</div>
-		
+		</div>		
 	<footer class="endtext">
  			Follow us on
 				<a href="https://www.instagram.com/nexthiveofficial/" target="_blank"><img class="img-fluid" src="images/ig.png" alt="" width="30" height="30"></a> and <a href="https://www.facebook.com/NEXT-HIVE-100381428820716" target="_blank"><img class="img-fluid" src="images/facebook.png" alt="" width="30" height="30"></a>
