--- a/12345678.html
+++ b/12345678.html
@@ -153,9 +153,9 @@
 		<div class="container">
         <div class="row">
 			<div class="col-sm-12 col-md-4 col-lg-4">
-				<h3>Linda Hemsworth</h3>
+				<h3>Linda Hem</h3>
 				<a class="first"><img class="img-fluid" src="images/expert.jpg" alt="" width="600" height="400"></a>
-				<p class="subtext"></p>
+				<p class="subtext">Linda Hem is a 25-year-old sustainable lifestyle author who enjoys reading, running and checking news stories. She is bright, creative and eager to start working with you!</p>
             </div>
 			<div class="col-sm-12 col-md-4 col-lg-4">
 							
@@ -163,8 +163,6 @@
 				<a class="first"><img class="img-fluid" src="images/expert2.png" alt="" width="600" height="400"></a>
 				<p class="subtext"> Olivia Rhodes Palmer is a 28-year-old professional sustainability advisor who enjoys listening to music and camping. She is energetic and inspiring, and excited to help you out!
 				</p>
-			<div class="col-sm-12 col-md-12 col-lg-12"> <br>
-		</div>
             </div>
 			<div class="col-sm-12 col-md-4 col-lg-4">
 				<h3>Harry Rine</h3>
