--- a/12345678.html
+++ b/12345678.html
@@ -103,7 +103,7 @@
 				</header>
             </div>
             <div class="col-sm-12 col-md-4 col-lg-4">
-				<header class="first"><br><img class="img-fluid" src="images/sub1.jpeg" alt="" width="600" height="400"></header>                
+				<header class="first"><br><img class="img-fluid" src="images/sub1.png" alt="" width="600" height="400"></header>                
             </div>
 			<div class="col-sm-12 col-md-12 col-lg-12"><br>
 		</div>
@@ -131,7 +131,7 @@
 				</header>
             </div>
             <div class="col-sm-12 col-md-4 col-lg-4">
-				<header class="first"><br><img class="img-fluid" src="images/sub2.jpeg" alt="" width="600" height="400"></header>                
+				<header class="first"><br><img class="img-fluid" src="images/sub2.png" alt="" width="600" height="400"></header>                
             </div>
 			<div class="col-sm-12 col-md-12 col-lg-12"> <br>
 		</div>
@@ -154,19 +154,19 @@
         <div class="row">
 			<div class="col-sm-12 col-md-4 col-lg-4">
 				<h3>Linda Hem</h3>
-				<a class="first"><img class="img-fluid" src="images/expert.jpg" alt="" width="600" height="400"></a>
+				<a class="first"><img class="img-fluid" src="images/expert1.png" alt="" width="500" height="300"></a>
 				<p class="subtext">Linda Hem is a 25-year-old sustainable lifestyle author who enjoys reading, running and checking news stories. She is bright, creative and eager to start working with you!</p>
             </div>
 			<div class="col-sm-12 col-md-4 col-lg-4">
 							
 				<h3>Olivia Rhodes</h3>
-				<a class="first"><img class="img-fluid" src="images/expert2.png" alt="" width="600" height="400"></a>
+				<a class="first"><img class="img-fluid" src="images/expert2.png" alt="" width="500" height="300"></a>
 				<p class="subtext"> Olivia Rhodes Palmer is a 28-year-old professional sustainability advisor who enjoys listening to music and camping. She is energetic and inspiring, and excited to help you out!
 				</p>
             </div>
 			<div class="col-sm-12 col-md-4 col-lg-4">
 				<h3>Harry Rine</h3>
-				<a class="first"><img class="img-fluid" src="images/expert3.png" alt="" width="600" height="400"></a>
+				<a class="first"><img class="img-fluid" src="images/expert3.png" alt="" width="500" height="300"></a>
 				<p class="subtext"> Harry Rine Young is a 31-year-old lifestyle expert who enjoys football, tennis and listening to music. He is loveable and smart. Harry has a ton of experience and is thrilled to help you!
 				</p>
             </div>
