--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 				</header>
             </div>
             <div class="col-sm-12 col-md-4 col-lg-4">
-				<a href="12345678.html" target="_blank"><br><img class="img-fluid" src="images/expert.jpg" alt="" width="600" height="400"></a>           
+				<a href="12345678.html" target="_blank"><br><img class="img-fluid" src="images/expert1.png" alt="" width="500" height="400"></a>           
             </div>
 		</div>
 		</div>
