--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 			  <div class="container">
 				<h1 class="display-4"><img class="img-fluid" src="images/logo.png" alt=""></h1>
 				<p class="lead">In a world where a sustainable lifestyle is very expensive, we believe that sustainability should be available for everyone, no matter what income. NEXT HIVE can offer you advice on living an environmental friendly lifestyle, as well as a comparison of various, sustainable products. Feel free to take a look around!</p>
-				<p class="lead"> <!-- Mission tekst --> </p>
+				<p class="lead">Our brand and services provides advice to people who want to live sustainable. our service is divided into 2 categories -1- Product comparison -2-subscriptions. Our goal is to build awareness of sustainability and to make it more accessible to everyone. Our service is low priced to make it affordable for every income.</p>
 			  </div>
 			</div>
 		</div>
