--- a/123456.html
+++ b/123456.html
@@ -30,7 +30,7 @@
 								</li>
 								<li class="nav-item">
 										<h1 class="my-class">
-											<a class="nav-link" href="123456.html">Home Supplies<span class="sr-only">(current)</span></a>
+											<a class="nav-link" href="123456.html">Home-Supplies<span class="sr-only">(current)</span></a>
 									</h1>
 								</li>
 								<li class="nav-item">
