--- a/23456789.html
+++ b/23456789.html
@@ -41,23 +41,21 @@
 							<ol> The font looks good.</ol>
 							<ol>After testing the website with a colorblindness filter, we found out that everything is still readable. </ol>
 						</ul>
+			</h4>
+			<h4>Cons:
+					<ul>
+							<ol> The text was a bit small. </ol>
+							<ol> The second page, where you can compare the products, is a bit messy because of all the images, which makes it unclear.  </ol> 
+							<ol> The pages ‘home’ and ‘homepage’ are confusing since they seem similar. </ol> 
+							<ol> More imagery to make it more appealing. </ol>
+							<ol> It is unclear that the subscriptions cost money. </ol>
+							<ol>It is not mentioned in the expert page that the experts are only accessible through a subscription. </ol>
+						</ul>
+			</h4>
+			<p>From this feedback, we can conclude that we should make our website clearer. Therefore, we made our font bigger and put less imagery on the ‘comparing’ pages. We changed the name of the ‘home’ page to ‘home supplies’. In addition, we added more imagery to the home page to make it more appealing. We added the subscriptions to the home page with a little summary about the costs and benefits. This way it is easier for customers to understand and find the subscriptions. We are also going to add an Instagram and Facebook icon to make our social media pages easier to find.  </p>
 
 
- 
 
-Cons: 
-
-The text was a bit small.  
-
-The second page, where you can compare the products, is a bit messy because of all the images, which makes it unclear.  
-
-The pages ‘home’ and ‘homepage’ are confusing since they seem similar.  
-
-More imagery to make it more appealing.  
-
-It is unclear that the subscriptions cost money.  
-
-It is not mentioned in the expert page that the experts are only accessible through a subscription.</h4>
 			
 		</div>
 		</div>
