--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             </div>
 			<div class="col-sm-12 col-md-4 col-lg-4">
 							
-				<header class="title">Home Supplies</header>
+				<header class="title">Home</header>
 				<a href="123456.html"><img class="img-fluid" src="images/home1.png" alt="" width="400" height="200"></a>                
 			<div class="col-sm-12 col-md-12 col-lg-12"> <br>
 				</div>
