--- a/123456.html
+++ b/123456.html
@@ -193,7 +193,7 @@ We make our pots with dynamic, iron-rich clays dug from the American South East 
 				<h3> €50 +</h3>
 				<a href="https://www.avocadogreenmattress.com/collections/furniture?irclickid=T-5VTEU6HxyLTjL0M-0V7wD0UkEXGfx0CRF%3ASE0&irgwc=1&utm_medium=affiliate&utm_source=impact&utm_campaign=1810803&ar_clx=yes&ar_channel=impact&ar_campaign=affiliate&ar_adgroup=%7Bpublisher_id%7D&ar_ad=%7Bad_id%7D&ar_strategy=aff" target="_blank"> <img class="img-fluid" src="images/home3.png" alt="" width="400" height="200"> </a>
 				<h5> Avocado </h5>
-				<h4>Avocado Green Mattresses are designed in Hoboken and handmade in sunny California, in our own factory, with only the finest certified organic, natural, and non-toxic materials. Our mission is to be the most respected source for organic and natural mattresses, pillows, and bedding at affordable prices — while maintaining environmentally conscious, ethical, and sustainable business practices across our entire supply chain — to help safeguard your health and protect our planet.</h4>
+				<h4>Avocado Green Mattresses are designed in Hoboken and handmade in sunny California, in our own factory, with only the finest certified organic, natural, and non-toxic materials. Our mission is to be the most respected source for organic and natural mattresses, pillows, and bedding at affordable prices  to help safeguard your health and protect our planet.</h4>
 			</article>
 			</div>
 		</div>
