--- a/23456789.html
+++ b/23456789.html
@@ -22,12 +22,17 @@
 			<h3> Justification </h3> 
 			<h5> First flow chart:</h5>
 			<h4> First, we had a meeting what we wanted to have in our website, we came fast to the conclusion that a contact page, search bar, link to our social media platforms, experts, clothes, cosmetics and a home button were important to have.</h4>
-			<p></p>
+			<p><img class="img-fluid" src="images/flow.png" alt="" width="1000" height="600"></p>
+			<h5> Wireframe</h5>
+			<p><img class="img-fluid" src="images/home.png" alt="" width="1000" height="600">
+				<img class="img-fluid" src="images/second.png" alt="" width="1000" height="600">
+				<img class="img-fluid" src="images/contact.png" alt="" width="1000" height="600">
+			</p>
 			<h4>After brainstorming about what needs to be in our website, we decided to make a wireframe. We did this by making use of Illustrator.  </h4>
 			<h5>Design elements</h5>
 			<h4>Colors: <br>
 				For our website, we used 6 different colors. These colors had already been established in the Brand Road Map. We chose green, because it is a color that immediately reminds you of nature and the environment, which fits with the ideas and values of the brand. Then we chose the color orange because it radiates energy and warmth. In addition, green and orange complementary colors. At last, a darker blue and black were chosen because it shows power and elegance.  </h4>
-			<p></p>
+			<p><img class="img-fluid" src="images/color.png" alt="" width="1000" height="600"></p>
 			<h4>Fonts: <br>
 				For the Brand Road Map, the font Arista 2.0 Alternate Light was used. However, after having a discussion all together we figured a different font would suit better, since the original font was a bit difficult to read sometimes. Therefore, we decided to pick another font that looked similar to the original, but less complicated to make it easier to read when visiting the website. The first font we chose for the final website is Comfortaa, which is used for the body text. We want our brand to be appealing to everybody, therefore we decided to pick a font that wasn’t too round, but also not too straight. Because of this, the font isn’t feminine nor masculine which then can appeal to our whole target audience. The second font we chose was Averia Serif Libre. This font will be used for the headers. It has the same characteristics as Comfortaa; the font is not feminine nor masculine. However, the font is a bit thicker which makes it stand out more, which is suitable for the headers.</h4>
 				<h4>User testing: <br>
@@ -52,10 +57,7 @@
 							<ol>It is not mentioned in the expert page that the experts are only accessible through a subscription. </ol>
 						</ul>
 			</h4>
-			<p>From this feedback, we can conclude that we should make our website clearer. Therefore, we made our font bigger and put less imagery on the ‘comparing’ pages. We changed the name of the ‘home’ page to ‘home supplies’. In addition, we added more imagery to the home page to make it more appealing. We added the subscriptions to the home page with a little summary about the costs and benefits. This way it is easier for customers to understand and find the subscriptions. We are also going to add an Instagram and Facebook icon to make our social media pages easier to find.  </p>
-
-
-
+			<h4>From this feedback, we can conclude that we should make our website clearer. Therefore, we made our font bigger and put less imagery on the ‘comparing’ pages. We removed the 'homepage' and added the link to the logo. We decided to keep 'home' as this descibes the category the best. In addition, we added more imagery to the home page to make it more appealing. We added the subscriptions to the home page with a little summary about the costs and benefits. This way it is easier for customers to understand and find the subscriptions. We are also going to add an Instagram and Facebook icon to make our social media pages easier to find.</h4>
 			
 		</div>
 		</div>
