--- a/12345678.html
+++ b/12345678.html
@@ -118,16 +118,15 @@
             <div class="col-sm-12 col-md-8 col-lg-8">
 				<h1 class="title"> Subscription 2 - €29,99 </h1>
 				<header class="subtext">
-                			<h1 class="subtext">
+                			<p class="subtext">
 						<ul>
 							<ol> Weekly general advise in the form of a magazine<br>
 								and a new sample every week</ol>
 							<ol> Two group meetings a month with a professional </ol> 
 							<ol> Access to the website </ol> 
 							<ol> Two personalised chats with an expert per month</ol> 
-							
 						</ul>
-					</h1>
+					</p>
 				</header>
             </div>
             <div class="col-sm-12 col-md-4 col-lg-4">
